<resources>
    <string name="ADD_TEAM">ADD_TEAM</string>
    <string name="APP_EXIT">APP_EXIT</string>
    <string name="APP_INSTALL">APP_INSTALL</string>
    <string name="APP_OPEN">APP_OPEN</string>
    <string name="APP_VERSION">APP_VERSION</string>
    <string name="Alert_Status">Alert_Status</string>
    <string name="BOOKMARKED_MERCH">BOOKMARKED_MERCH</string>
    <string name="BOOKMARKED_NEWS">BOOKMARKED_NEWS</string>
    <string name="BOOKMARK_MERCH_CARD_VIEW">BOOKMARK_MERCH_CARD_VIEW</string>
    <string name="BOOKMARK_NEWS_CARD_VIEW">BOOKMARK_NEWS_CARD_VIEW</string>
    <string name="BOTTOM_NAV_CLICK">BOTTOM_NAV_CLICK</string>
    <string name="Bottom_nav">Bottom_nav</string>
    <string name="Card_Type">Card_Type</string>
    <string name="Card_type">Card_type</string>
    <string name="Category_name">Category_name</string>
    <string name="Content">Content</string>
    <string name="Date_selected">Date_selected</string>
    <string name="FIRST_OPEN">FIRST_OPEN</string>
    <string name="FIRST_SELECTION_SCREEN_APPLY">FIRST_SELECTION_SCREEN_APPLY</string>
    <string name="FIRST_TEAM_SELECTION_VIEW">FIRST_TEAM_SELECTION_VIEW</string>
    <string name="FTUE_SPLASH_SEEN">FTUE_SPLASH_SEEN</string>
    <string name="HOME_ADD_TEAM">HOME_ADD_TEAM</string>
    <string name="HOME_FIRST_ADD_YOUR_TEAM">HOME_FIRST_ADD_YOUR_TEAM</string>
    <string name="HOME_HIGHLIGHTS_SWIPE">HOME_HIGHLIGHTS_SWIPE</string>
    <string name="HOME_HIGHLIGHTS_VIEW">HOME_HIGHLIGHTS_VIEW</string>
    <string name="HOME_MERCH_EXLORE">HOME_MERCH_EXLORE</string>
    <string name="HOME_MERCH_VIEW">HOME_MERCH_VIEW</string>
    <string name="HOME_MYNEWS_CARD_VIEW">HOME_MYNEWS_CARD_VIEW</string>
    <string name="HOME_MYNEWS_READALL">HOME_MYNEWS_READALL</string>
    <string name="HOME_MYNEWS_VIDEO_BOOKMARK">HOME_MYNEWS_VIDEO_BOOKMARK</string>
    <string name="HOME_MYNEWS_VIDEO_SWIPE">HOME_MYNEWS_VIDEO_SWIPE</string>
    <string name="HOME_MYNEWS_VIDEO_VIEW">HOME_MYNEWS_VIDEO_VIEW</string>
    <string name="HOME_MYTEAM_SWIPE">HOME_MYTEAM_SWIPE</string>
    <string name="HOME_MYTEAM_VIEW">HOME_MYTEAM_VIEW</string>
    <string name="HOME_PASTGAME_CARD">HOME_PASTGAME_CARD</string>
    <string name="HOME_PASTGAME_SWIPE">HOME_PASTGAME_SWIPE</string>
    <string name="HOME_SCORECARD_CLICK">HOME_SCORECARD_CLICK</string>
    <string name="HOME_SCORECARD_SWIPE">HOME_SCORECARD_SWIPE</string>
    <string name="HOME_SCORECARD_VIEW">HOME_SCORECARD_VIEW</string>
    <string name="HOME_SEARCH">HOME_SEARCH</string>
    <string name="HOME_SETTINGS_CLICK">HOME_SETTINGS_CLICK</string>
    <string name="HOME_TODAYSGAME_SWIPE">HOME_TODAYSGAME_SWIPE</string>
    <string name="HOME_TODAYSGAME_VIEW">HOME_TODAYSGAME_VIEW</string>
    <string name="HOME_TOPNEWS_SHARE">HOME_TOPNEWS_SHARE</string>
    <string name="HOME_TOPNEWS_VIEW">HOME_TOPNEWS_VIEW</string>
    <string name="HOME_UPCOMINGGAME_CARD">HOME_UPCOMINGGAME_CARD</string>
    <string name="HOME_UPCOMINGGAME_SWIPE">HOME_UPCOMINGGAME_SWIPE</string>
    <string name="Home">Home</string>
    <string name="LAST_ENGAGED_PLAYER">LAST_ENGAGED_PLAYER</string>
    <string name="LAST_ENGAGED_TEAM">LAST_ENGAGED_TEAM</string>
    <string name="LAST_FOLLOWED_PLAYER">LAST_FOLLOWED_PLAYER</string>
    <string name="LAST_FOLLOWED_TEAM">LAST_FOLLOWED_TEAM</string>
    <string name="LEAGUES_SELECTED">LEAGUES_SELECTED</string>
    <string name="LEAGUE_HEADER_TOP_NEWS">LEAGUE_HEADER_TOP_NEWS</string>
    <string name="League1_name">League1_name</string>
    <string name="League2_name">League2_name</string>
    <string name="League_name">League_name</string>
    <string name="Live_Status">Live_Status</string>
    <string name="Live_status">Live_status</string>
    <string name="MERCH_BOOKMARK">MERCH_BOOKMARK</string>
    <string name="MERCH_CARD_CLICK">MERCH_CARD_CLICK</string>
    <string name="MERCH_CARD_IMPRESSION">MERCH_CARD_IMPRESSION</string>
    <string name="MERCH_CTA">MERCH_CTA</string>
    <string name="MERCH_FILTERS">MERCH_FILTERS</string>
    <string name="MERCH_FILTERS_CATEGORIES">MERCH_FILTERS_CATEGORIES</string>
    <string name="MERCH_FILTER_APPLY">MERCH_FILTER_APPLY</string>
    <string name="MERCH_FILTER_RESET">MERCH_FILTER_RESET</string>
    <string name="MY_TEAM_NEWS">MY_TEAM_NEWS</string>
    <string name="MY_TEAM_NEWS_SHARE">MY_TEAM_NEWS_SHARE</string>
    <string name="MY_TEAM_NEWS_VIEW">MY_TEAM_NEWS_VIEW</string>
    <string name="Match_date">Match_date</string>
    <string name="Merchandise">Merchandise</string>
    <string name="Month_selected">Month_selected</string>
    <string name="My_Team">My Team</string>
    <string name="My_Team_Schedules">My Team Schedules Page</string>
    <string name="My_team">My team</string>
    <string name="NEWS_BOOKMARK">NEWS_BOOKMARK</string>
    <string name="NEWS_CARD_CLICK">NEWS_CARD_CLICK</string>
    <string name="NEWS_CARD_IMPRESSION">NEWS_CARD_IMPRESSION</string>
    <string name="NEWS_CARD_SHARE">NEWS_CARD_SHARE</string>
    <string name="NEWS_CARD_VIEW">NEWS_CARD_VIEW</string>
    <string name="NEWS_DETAIL_PAGE_VIEW">NEWS_DETAIL_PAGE_VIEW</string>
    <string name="NEWS_L2_BOOKMARK">NEWS_L2_BOOKMARK</string>
    <string name="NEWS_L2_SHARE">NEWS_L2_SHARE</string>
    <string name="NEWS_L2_VIEW">NEWS_L2_VIEW</string>
    <string name="News">News</string>
    <string name="ONBOARDING_APPLY">ONBOARDING_APPLY</string>
    <string name="ONBOARDING_DESELECT_TEAM">ONBOARDING_DESELECT_TEAM</string>
    <string name="ONBOARDING_SELECT_LEAGUE">ONBOARDING_SELECT_LEAGUE</string>
    <string name="ONBOARDING_SELECT_TEAM">ONBOARDING_SELECT_TEAM</string>
    <string name="On_Boarding">On Boarding</string>
    <string name="PLAYERS_FOLLOWED">PLAYERS_FOLLOWED</string>
    <string name="PLAYERS_SELECTED">PLAYERS_SELECTED</string>
    <string name="PLAYER_NEWS_VIEW">PLAYER_NEWS_VIEW</string>
    <string name="PLAYER_SEARCH">PLAYER_SEARCH</string>
    <string name="PLAYER_STARRED">PLAYER_STARRED</string>
    <string name="PLAYER_UNSTARRED">PLAYER_UNSTARRED</string>
    <string name="PULL_TO_REFRESH">PULL_TO_REFRESH</string>
    <string name="Page">Page</string>
    <string name="Player_name">Player_name</string>
    <string name="Product_name">Product_name</string>
    <string name="Product_price">Product_price</string>
    <string name="Publishing_date">publishing_date</string>
    <string name="Quartile_number">Quartile_number</string>
    <string name="SCORECARD_CLICK">SCORECARD_CLICK</string>
    <string name="SCORECARD_IMPRESSION">SCORECARD_IMPRESSION</string>
    <string name="SCORE_NEWS_BOOKMARK">SCORE_NEWS_BOOKMARK</string>
    <string name="SCORE_PLAYBYPLAY_FIRSTQUARTER">SCORE_PLAYBYPLAY_FIRSTQUARTER</string>
    <string name="SCORE_PLAYBYPLAY_FOURTHQUARTER">SCORE_PLAYBYPLAY_FOURTHQUARTER</string>
    <string name="SCORE_PLAYBYPLAY_QUARTERNAME">SCORE_PLAYBYPLAY_QUARTERNAME</string>
    <string name="SCORE_PLAYBYPLAY_SECONDQUARTER">SCORE_PLAYBYPLAY_SECONDQUARTER</string>
    <string name="SCORE_PLAYBYPLAY_THIRDQUARTER">SCORE_PLAYBYPLAY_THIRDQUARTER</string>
    <string name="SCORE_SUMMARY_LEADERS_LEFTARROW">SCORE_SUMMARY_LEADERS_LEFTARROW</string>
    <string name="SCORE_SUMMARY_LEADERS_RIGHTARROW">SCORE_SUMMARY_LEADERS_RIGHTARROW</string>
    <string name="SCORE_SUMMARY_LEFTARROW">SCORE_SUMMARY_LEFTARROW</string>
    <string name="SCORE_SUMMARY_PLAYER_VIEW">SCORE_SUMMARY_PLAYER_VIEW</string>
    <string name="SCORE_SUMMARY_RIGHTARROW">SCORE_SUMMARY_RIGHTARROW</string>
    <string name="SCORE_SUMMARY_SLIDE">SCORE_SUMMARY_SLIDE</string>
    <string name="SCORE_SUMMARY_TEAMTAB">SCORE_SUMMARY_TEAMTAB</string>
    <string name="SCORE_TEAMSTATS_LEADERS_LEFTARROW">SCORE_TEAMSTATS_LEADERS_LEFTARROW</string>
    <string name="SCORE_TEAMSTATS_LEADERS_RIGHTARROW">SCORE_TEAMSTATS_LEADERS_RIGHTARROW</string>
    <string name="SCORE_TEAMSTATS_LEADERS_SLIDE">SCORE_TEAMSTATS_LEADERS_SLIDE</string>
    <string name="SCORE_TEAMSTATS_TEAMTAB">SCORE_TEAMSTATS_TEAMTAB</string>
    <string name="SCORE_TEAMS_TAB">SCORE_TEAMS_TAB</string>
    <string name="SCORE_VIEW_CARD">SCORE_VIEW_CARD</string>
    <string name="SEARCH_CLICK">SEARCH_CLICK</string>
    <string name="SEARCH_FOLLOW">SEARCH_FOLLOW</string>
    <string name="SELECTION_SCREEN_APPLY">SELECTION_SCREEN_APPLY</string>
    <string name="SELECTION_SCREEN_DESELECT_TEAM">SELECTION_SCREEN_DESELECT_TEAM</string>
    <string name="SELECTION_SCREEN_SEARCH">SELECTION_SCREEN_SEARCH</string>
    <string name="SELECTION_SCREEN_SELECT_LEAGUE">SELECTION_SCREEN_SELECT_LEAGUE</string>
    <string name="SELECTION_SCREEN_SELECT_TEAM">SELECTION_SCREEN_SELECT_TEAM</string>
    <string name="SETTINGS_ABOUT">SETTINGS_ABOUT</string>
    <string name="SETTINGS_BOOKMARKS">SETTINGS_BOOKMARKS</string>
    <string name="SETTINGS_BOOKMARKS_MERCHANDISE">SETTINGS_BOOKMARKS_MERCHANDISE</string>
    <string name="SETTINGS_BOOKMARKS_NEWS">SETTINGS_BOOKMARKS_NEWS</string>
    <string name="SETTINGS_PREFERENCES_ADD_PLAYER">SETTINGS_PREFERENCES_ADD_PLAYER</string>
    <string name="SETTINGS_PREFERENCES_ADD_TEAM">SETTINGS_PREFERENCES_ADD_TEAM</string>
    <string name="SETTINGS_PREFERENCES_AND_ALERTS">SETTINGS_PREFERENCES_AND_ALERTS</string>
    <string name="SETTINGS_PREFERENCES_REMOVE_PLAYER">SETTINGS_PREFERENCES_REMOVE_PLAYER</string>
    <string name="SETTINGS_PREFERENCES_REMOVE_TEAM">SETTINGS_PREFERENCES_REMOVE_TEAM</string>
    <string name="SETTINGS_PRIVACY">SETTINGS_PRIVACY</string>
    <string name="SETTINGS_TRENDING_ALERTS">SETTINGS_TRENDING_ALERTS</string>
    <string name="SETTINGS_WHATS_NEW">SETTINGS_WHATS_NEW</string>
    <string name="SPLASH_SEEN">SPLASH_SEEN</string>
    <string name="Seller_name">Seller_name</string>
    <string name="SortBy_Parameter">SortBy_Parameter</string>
    <string name="Source_page">Source_page</string>
    <string name="Stat">Stat</string>
    <string name="Sub_Source">Sub-Source</string>
    <string name="TAB_MY_TEAM">TAB_MY_TEAM</string>
    <string name="TAB_TOP_NEWS">TAB_TOP_NEWS</string>
    <string name="TEAMS_SELECTED">TEAMS_SELECTED</string>
    <string name="TEAMS_SELECTED_NAME">TEAMS_SELECTED_NAME</string>
    <string name="TEAM_ALL_HIGHLIGHT">TEAM_ALL_HIGHLIGHT</string>
    <string name="TEAM_ALL_HIGHLIGHTS_SWIPE">TEAM_ALL_HIGHLIGHTS_SWIPE</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="continue_btn">Continue</string>
    <string name="daily">Daily</string>
    <string name="glance_game_button_retry">Refresh</string>
    <string name="hourly">Hourly</string>
    <string name="later">Later</string>
    <string name="lock_screen_got_new_update">Your lock screen just got a brand new update!</string>
    <string name="network_disconnected">Looks like you are not connected!</string>
    <string name="network_sleepy">Looks like you are offline</string>
    <string name="no_connection_desc">"Please check your internet connection 
 and try again"</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_network_icon">No Network Icon</string>
    <string name="oops">Oops!</string>
    <string name="please_check_internet">Please check your Internet connection and try again.</string>
    <string name="reactivation_subtitle">Live Relevant information now on your lockscreen</string>
    <string name="reactivation_title">Upgrade Your Lockscreen</string>
    <string name="select_teams">Select Teams</string>
    <string name="select_your_sport">Select teams that you want to follow</string>
    <string name="setup_now">Setup Now</string>
    <string name="skip">Skip</string>
    <string name="tap_reload">Tap to Reload</string>
    <string name="try_again">Try Again</string>
    <string name="turn_on_your_mobile_data_or_wifi">Turn on your mobile data or Wi-Fi to start shopping!</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="weekly">Weekly</string>
</resources>