<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/retry" android:background="@color/shop_tab_offline_view_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/sleeping_bear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_24" app:layout_constraintBottom_toTopOf="@id/network_heading" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" app:srcCompat="@drawable/wifi_slash" />
    <TextView android:textSize="@dimen/text_size_26sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/network_heading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_24" android:text="@string/oops" app:layout_constraintBottom_toTopOf="@id/network_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sleeping_bear" />
    <TextView android:textSize="@dimen/text_size_16sp" android:textColor="@color/white" android:id="@id/network_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:text="@string/network_sleepy" app:layout_constraintBottom_toTopOf="@id/network_subtitle" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/network_heading" />
    <TextView android:textSize="@dimen/text_size_14sp" android:textColor="@color/white" android:gravity="center" android:id="@id/network_subtitle" android:layout_width="210.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:text="@string/turn_on_your_mobile_data_or_wifi" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/network_title" />
    <Button android:textColor="@color/white" android:id="@id/retry_button" android:background="@color/strawberry" android:layout_width="0.0dip" android:layout_height="@dimen/dp_42" android:layout_marginBottom="@dimen/dp_32" android:text="@string/glance_game_button_retry" android:topLeftRadius="@dimen/dp_40" android:topRightRadius="@dimen/dp_40" android:bottomLeftRadius="@dimen/dp_40" android:bottomRightRadius="@dimen/dp_40" android:layout_marginHorizontal="@dimen/dp_50" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>