<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/reactivation_widget" android:background="@drawable/onboarding_rounded_corner" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="8.0dip" android:layout_below="@id/top_layout"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center" android:background="@drawable/onboarding" android:layout_width="@dimen/widget_left_icon_width" android:layout_height="@dimen/widget_left_icon_height" android:layout_marginStart="@dimen/widget_left_icon_margin" android:layout_marginEnd="5.0dip" />
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="10.0dip">
        <TextView android:textStyle="bold" android:textColor="@color/white" android:ellipsize="end" android:id="@id/reactivation_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reactivation_title" android:maxLines="2" />
        <TextView android:textSize="11.0sp" android:textColor="@color/white" android:ellipsize="end" android:id="@id/reactivation_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reactivation_subtitle" android:maxLines="2" android:layout_marginEnd="4.0dip" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="38.0dip">
            <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="start|bottom|center" android:id="@id/reactivation_button" android:background="@drawable/widgetbutton_rounded_corner" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upgrade_now" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>