<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/error_icon" android:layout_width="@dimen/control_hepta_space" android:layout_height="@dimen/control_hepta_space" android:layout_marginTop="@dimen/x_large_common_height" android:contentDescription="@string/no_network_icon" android:layout_marginStart="@dimen/control_double_space" android:layout_marginEnd="@dimen/control_double_space" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_no_wifi" />
    <TextView android:textSize="@dimen/text_size_standard" android:id="@id/tv_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/control_triple_space" android:text="@string/network_disconnected" android:maxLines="1" android:layout_marginStart="@dimen/control_quad_space" android:layout_marginEnd="@dimen/control_quad_space" android:lineHeight="@dimen/text_size_very_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/error_icon" style="@style/title_text_style" />
    <TextView android:textSize="@dimen/text_size_very_small" android:id="@id/tv_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/control_mini_space" android:text="@string/please_check_internet" android:layout_marginStart="@dimen/control_octa_space" android:layout_marginEnd="@dimen/control_octa_space" android:lineHeight="@dimen/text_size_small" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_header" style="@style/subtitle_text_style" />
    <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:id="@id/ll_tap_reload" android:background="@drawable/rounded_ripple" android:padding="@dimen/control_extra_space" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/control_hepta_space" android:layout_marginStart="@dimen/control_quad_space" android:layout_marginEnd="@dimen/control_quad_space" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_message">
        <ImageView android:id="@id/iv_tap_reload" android:layout_width="@dimen/control_double_space" android:layout_height="@dimen/control_double_space" android:contentDescription="@string/tap_reload" app:srcCompat="@drawable/ic_reload" />
        <TextView android:textSize="@dimen/text_size_small" android:id="@id/tv_tap_reload" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tap_reload" android:layout_marginStart="@dimen/control_extra_space" android:lineHeight="@dimen/text_size_standard" style="@style/cta_text_style" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>