<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/white_top_50" android:paddingTop="@dimen/dp_28" android:paddingBottom="@dimen/dp_38" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/dp_40" android:paddingEnd="@dimen/dp_40"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_wifi_bottom" android:layout_width="@dimen/dp_60" android:layout_height="@dimen/dp_60" android:layout_marginBottom="@dimen/dp_24" android:src="@drawable/ic_wifi_off_blue" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_no_connection_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:text="@string/no_internet_connection" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_wifi_bottom" />
    <TextView android:textSize="@dimen/sp_14" android:textColor="@color/black_75_opacity" android:gravity="center" android:id="@id/tv_no_connection_desc" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/no_connection_desc" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_no_connection_title" />
    <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/btn_try_again" android:background="@drawable/blue_round_50" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_28" android:text="@string/try_again" android:textAllCaps="false" android:layout_marginStart="@dimen/dp_12" android:layout_marginEnd="@dimen/dp_12" app:backgroundTint="@null" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_no_connection_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>