<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/stContainerCl" android:background="@drawable/sports_bg_onboarding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:nestedScrollingEnabled="true" app:elevation="2.0dip" app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white_70" android:gravity="center" android:id="@id/stSkipHeaderTv" android:paddingTop="@dimen/_16sdp" android:paddingBottom="@dimen/_12sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/skip" android:fontFamily="@font/graphik_regular" android:paddingStart="@dimen/_24sdp" android:paddingEnd="@dimen/_24sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/_18ssp" android:textColor="@color/white" android:id="@id/stHeaderTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_teams" android:fontFamily="@font/graphik_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/stSkipHeaderTv" />
        <TextView android:textSize="@dimen/_14ssp" android:textColor="@color/textColor100" android:gravity="center" android:id="@id/stSubHeaderTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8sdp" android:text="@string/select_your_sport" android:fontFamily="@font/graphik_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/stHeaderTv" />
        <androidx.recyclerview.widget.RecyclerView android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/stLeaguesRv" android:clipChildren="false" android:clipToPadding="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_16sdp" android:overScrollMode="never" android:paddingStart="@dimen/_16sdp" android:paddingEnd="@dimen/_16sdp" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/stSubHeaderTv" />
        <androidx.recyclerview.widget.RecyclerView android:id="@id/stTeamsRv" android:paddingBottom="@dimen/_86sdp" android:clipChildren="false" android:clipToPadding="true" android:layout_width="fill_parent" android:layout_height="0.0dip" android:overScrollMode="never" android:paddingStart="@dimen/_16sdp" android:paddingEnd="@dimen/_16sdp" app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" app:layout_behavior="@string/appbar_scrolling_view_behavior" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/stLeaguesRv" app:spanCount="4" />
        <androidx.compose.ui.platform.ComposeView android:id="@id/error_view" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout android:id="@id/stBottomLayout" android:background="@drawable/bg_continue" android:paddingBottom="@dimen/_40sdp" android:layout_width="fill_parent" android:layout_height="@dimen/_152sdp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
            <RelativeLayout android:layout_gravity="bottom" android:id="@id/stContinueLayout" android:background="@drawable/bg_continue_inactive" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/_44sdp" android:layout_marginStart="@dimen/_16sdp" android:layout_marginEnd="@dimen/_16sdp">
                <TextView android:enabled="false" android:gravity="center" android:id="@id/stContinueTv" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/continue_btn" style="@style/button_on_boarding" />
                <include android:id="@id/stContinueProgressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" layout="@layout/sports_progress_bar" />
            </RelativeLayout>
        </LinearLayout>
        <include android:id="@id/stProgressBar" layout="@layout/sports_progress_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>