<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginVertical="@dimen/dp_12"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/today_card_header_view" app:layout_constraintTop_toTopOf="parent" layout="@layout/today_card_header_view" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/forecast_tab_view" android:background="@drawable/rect_forecast_tabs" android:layout_width="fill_parent" android:layout_height="@dimen/dp_36" android:layout_marginStart="@dimen/dp_16" android:layout_marginEnd="@dimen/dp_16" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/today_card_header_view" app:layout_constraintTop_toBottomOf="@id/today_card_header_view">
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/white" android:id="@id/tab_hourly" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/hourly" android:layout_marginStart="@dimen/dp_4" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/tab_daily" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/ForecastTabBackground" />
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/white" android:id="@id/tab_daily" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/daily" android:layout_marginEnd="@dimen/dp_4" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/tab_weekly" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toEndOf="@id/tab_hourly" app:layout_constraintTop_toTopOf="parent" style="@style/ForecastTabBackground" />
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/white" android:id="@id/tab_weekly" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/weekly" android:layout_marginEnd="@dimen/dp_4" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toEndOf="@id/tab_daily" app:layout_constraintTop_toTopOf="parent" style="@style/ForecastTabBackground" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout android:id="@id/layout_forecast_hourly" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/forecast_tab_view" style="@style/TodayCardV2" />
    <FrameLayout android:id="@id/layout_forecast_daily" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/forecast_tab_view" style="@style/TodayCardV2" />
    <FrameLayout android:id="@id/layout_forecast_weekly" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/forecast_tab_view" style="@style/TodayCardV2" />
</androidx.constraintlayout.widget.ConstraintLayout>